# idlc

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt  Makefile  README  README.md  build  caller.c  ccst-class-hierarchy.txt  common.h  design.md  dump.txt  grammar_only.peg  idlc  it_tyname_proj(const ast::tyname_proj& node);  lcd_idl.peg  linecount  marshal_op.cpp  marshaling.md  new-syntax.md  notes.txt  setup  string_utils.cpp  symbol_table.cpp  type_name_visitor.cpp
ast/: lcd_ast.cpp  scope.cpp  types.cpp  variable.cpp
backend/: code_generation.cpp  code_generation.h  marshaling.cpp  marshaling.h
code_gen/: allocate_type_visitor.cpp  ccst.cpp  client.cpp  containers.cpp  glue.cpp  helper.cpp  interface.cpp  marshal.cpp  server.cpp  trampoline.cpp  type_utils.cpp  unmarshal.cpp  utils.cpp  v2.cpp  variable_utils.cpp
error/: error.cpp
examples/: .assorted.idl.swn  .assorted.idl.swo  .assorted.idl.swp  .dummy.idl.swp  acpi_power_meter.idl  alx.idl  array_union.idl  assorted.idl  can-raw.idl  circularity.idl  coretemp.idl  dmzero.idl  driver.idl  dummy.idl  example.1.idl  ixgbe.idl  kernel.idl  kernelNoChans-final.idl  kernelNoChans.idl  marshal_test.idl  mei-me.idl  msr_kernel.idl  mwe-msg_hdr.idl  new-grammar.idl  no-validate-no-strings.idl  null_blk.idl  null_net_kernel.idl  nullb.idl  nullnet.idl  nullnetReqNoChans-final.idl  nullnetReqNoChans.idl  rpc_blocks.idl  skx_edac.idl  test_casted_within.idl  test_static_rpc.idl  userspace_test.idl  utest.idl  utest_driver.idl
examples/assorted/: globals-locks.idl  locks.idl
examples/foobar/: foobar.idl  kernel.idl
examples/nullnet_toy/: kernel.idl  nullnet.idl  nullnet_channels.idl
examples/require/: nullnet-require.idl
examples/small-examples/: kernel.idl  nullnet.idl
frontend/: generic_pass.h  log.h  main.cpp  module_import.cpp  module_import.h  node_map.h  string_heap.h  visit.h
glue_helper/: cap.c
include/: assert.h  ast_visitors.h  astprint.h  ccst.h  code_gen.h  error.h  idl_assert.h  lcd_ast.h  marshal_op.h  require.h  symbol_table.h  utils.h
include/Passes/: astprint.h  print.h  require.h
main/: code_generation.cpp  code_generation.h  dump.cpp  dump.h  generic_pass.h  log.h  main.cpp  marshaling.cpp  marshaling.h  module_import.cpp  module_import.h  node_map.h  rpc_import.cpp  rpc_import.h  string_heap.cpp  string_heap.h  type_map.cpp  type_map.h  visit.h
parser/: ast.h  ast_.h  generate  idl.peg  idl_.peg  lcd-idl-grammar-info.md  lcd-idl-info.md  lcd-idl-peg-nonterminals-dependency.txt  lcd_idl-info.txt  lcd_idl.peg  parser.cpp
parser/vembyr-1.1/: peg.py
passes/: astprint.cpp  require.cpp
source/: Doxyfile  generation.cpp  generation.h  main.cpp  string_heap.cpp  string_heap.h  utility.h
source/ast/: ast.h  ast_dump.cpp  ast_dump.h  ast_walk.h  node_ptrs.h  pgraph.h  pgraph_dump.cpp  pgraph_walk.h  scope.h  tag_types.h
source/backend/: .generation.cpp.swp  .helpers.cpp.swp  c_specifiers.cpp  c_specifiers.h  generation.cpp  generation.h  helpers.cpp  helpers.h  walks.cpp  walks.h
source/frontend/: analysis.cpp  analysis.h  injection.h  name_binding.cpp  name_binding.h
source/parser/: idl.peg  idl_parse.h  parse_globals.cpp  parse_globals.h
src/: generation.cpp  main.cpp  resolution.cpp  resolution.h  tab_over.h  tag_types.h  utility.h
src/_frontend/: node_map.h
src/ast/: ast.h  ast_dump.cpp  ast_walk.h  dump_ast.cpp  dump_ast.h  pgraph.h  pgraph_dump.cpp  pgraph_dump.h  pgraph_walk.h  scope.h  tag_types.h  walk.h
src/parser/: ast.h  (+7 more)
temp/: new_vfs.idl
test/: driver.idl  kernel.idl  test.cpp
(+40 files in other folders)
